임시 마크업 및 js querySelector 설정

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
           <th>1/128</th>
         </tr>
         <tr>
-          <td>1</td>
-          <td>2</td>
-          <td>3</td>
-          <td>4</td>
-          <td>5</td>
-          <td>6</td>
-          <td>7</td>
-          <td>8</td>
-          <td>9</td>
+          <td class="bpm-output">1</td>
+          <td class="minim">2</td>
+          <td class="crotchet">3</td>
+          <td class="quaver">4</td>
+          <td class="quaver-dotted">5</td>
+          <td class="semi-quaber">6</td>
+          <td class="demi-semi-quaber">7</td>
+          <td class="hemi-demi-semi-quaver">8</td>
+          <td class="128th-note">9</td>
         </tr>
       </table>
     </div>
