--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
           <th>1/128</th>
         </tr>
         <tr>
-          <td class="bpm-output">1</td>
-          <td class="minim">2</td>
-          <td class="crotchet">3</td>
-          <td class="quaver">4</td>
-          <td class="quaver-dotted">5</td>
-          <td class="semi-quaber">6</td>
-          <td class="demi-semi-quaber">7</td>
-          <td class="hemi-demi-semi-quaver">8</td>
-          <td class="128th-note">9</td>
+          <td class="bpm-output"></td>
+          <td class="minim"></td>
+          <td class="crotchet"></td>
+          <td class="quaver"></td>
+          <td class="quaver-dotted"></td>
+          <td class="semi-quaver"></td>
+          <td class="demi-semi-quaver"></td>
+          <td class="hemi-demi-semi-quaver"></td>
+          <td class="one-hundred-twenty-eight"></td>
         </tr>
       </table>
     </div>
