설명란 가운데정렬

--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
         </tr>
       </table>
     </div>
-    <p>BPM 단위를 ms 단위로 변환해주는 계산기입니다.</p>
+    <p class="desc">BPM 단위를 ms 단위로 변환해주는 계산기입니다.</p>
   </body>
 </html>
