--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <link rel="stylesheet" href="/style/reset.css" />
-    <link rel="stylesheet" href="/style/style.css" />
-    <script defer src="/js/index.js"></script>
+    <link rel="stylesheet" href="./style/reset.css" />
+    <link rel="stylesheet" href="./style/style.css" />
+    <script defer src="./js/index.js"></script>
     <title>BPMTOMS</title>
   </head>
   <body>
